<resources>
    <string name="app_name">CodeChallenges</string>
    <string name="welcoming_app_name">Welcome to FLABB APP</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="university_organization">University/Organization</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="email_checker">Email cannot be empty</string>
    <string name="name_checker">Nama cannot be empty</string>
    <string name="organization_checker">University/Organization cannot be empty</string>
    <string name="password_checker">Password cannot be empty</string>
    <string name="password_not_same">Password not same</string>
    <string name="please_register">Please Register First</string>
    <string name="password_wrong">Password or Username is not valid</string>
    <string name="logout_user">Are you sure want to Logout ?</string>
    <string name="user_out">Please click BACK again to exit</string>
    <string name="Create_new_account">Create a new account</string>
</resources>