<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".Splashs.SplashScreen">

    <ImageView
            android:id="@+id/img_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/opening" />

    <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="164dp"
            android:layout_height="30dp"
            android:layout_below="@id/img_logo"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/welcoming_app_name"
            android:textStyle="bold"
            android:textSize="15sp"
    />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_welcome"
            android:gravity="center"
            android:orientation="horizontal">

        <Button
                android:id="@+id/bt_Login"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/login_button_background"
                android:text="@string/login" />

        <Button
                android:id="@+id/bt_Register"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="@drawable/register_button_background"
                android:text="@string/register" />
    </LinearLayout>


</RelativeLayout>